valueof should be better for not creating a new object
Signed-off-by: Kristof Szabados <Kristof.Szabados@ericsson.com>